--- a/demo/src/app/pages/modules/datepicker/datepicker.page.html
+++ b/demo/src/app/pages/modules/datepicker/datepicker.page.html
@@ -8,26 +8,33 @@
     <sui-message class="info" [isDismissable]="false">
         <div class="header">Important Note</div>
         <p>
-            The datepicker is a port of <a href="https://github.com/mdehoog/Semantic-UI-Calendar">Semantic-UI-Calendar</a>,
-            an external module for Semantic UI. If you'd like to use the datepicker in your app, you must include the module's
-            CSS alongside Semantic UI's.
+            The datepicker is a port of
+            <a href="https://github.com/mdehoog/Semantic-UI-Calendar">Semantic-UI-Calendar</a>, an external module for Semantic UI. If you'd like to use the datepicker in your app,
+            you must include the module's CSS alongside Semantic UI's.
         </p>
         <p>If you're not customizing the default theme, add the CSS as a link tag to your page:</p>
         <div class="ui segment">
             <demo-codeblock language="markup" [src]="cssInclude"></demo-codeblock>
         </div>
-        <p>Otherwise, follow the <a href="https://github.com/mdehoog/Semantic-UI-Calendar#compiling-css-from-less">Compilation Instructions</a>.
+        <p>Otherwise, follow the
+            <a href="https://github.com/mdehoog/Semantic-UI-Calendar#compiling-css-from-less">Compilation Instructions</a>.
     </sui-message>
 
     <h2 class="ui dividing header">Examples</h2>
 
+
+    <!-- exampleStandardTemplate -->
     <demo-example [code]="exampleStandardTemplate">
         <div info>
             <h4 class="ui header">Datepicker</h4>
+            <!-- A datepicker supports a number of picking modes -->
             <p>A datepicker supports a number of picking modes</p>
         </div>
+        <!-- example-datepicker-standard  -->
         <example-datepicker-standard result></example-datepicker-standard>
     </demo-example>
+
+
 
     <demo-example [code]="exampleButtonTemplate">
         <div info>
@@ -41,8 +48,7 @@
         <div info>
             <h4 class="ui header">Min & Max</h4>
             <p>
-                A datepicker can be limited to a certain date range. When
-                using reactive forms, validation errors are generated automatically
+                A datepicker can be limited to a certain date range. When using reactive forms, validation errors are generated automatically
             </p>
         </div>
         <example-datepicker-min-max result></example-datepicker-min-max>
@@ -51,8 +57,8 @@
     <sui-message class="info" [isDismissable]="false">
         <div class="header">Timezones</div>
         <p>
-            The datepicker will always return a <code>Date</code> object in the local timezone.
-            When in modes that don't include a time, the time will always be set to midnight.
+            The datepicker will always return a
+            <code>Date</code> object in the local timezone. When in modes that don't include a time, the time will always be set to midnight.
         </p>
     </sui-message>
     <br>
@@ -61,7 +67,9 @@
         <div info>
             <h4 class="ui header">Mobile Fallback</h4>
             <p>A datepicker can be configured to fallback to the native browser UI on mobile (this is the default behavior)</p>
-            <p>Note that the <code>[pickerUseNativeOnMobile]</code> property only exists on datepickers attached to <code>input</code> elements.</p>
+            <p>Note that the
+                <code>[pickerUseNativeOnMobile]</code> property only exists on datepickers attached to
+                <code>input</code> elements.</p>
         </div>
         <example-datepicker-mobile-fallback result></example-datepicker-mobile-fallback>
     </demo-example>
